--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,12 +1,34 @@
 <%= button_to "logout", destroy_user_session_path, method: :delete  %>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(http://www.todayproperties.com.my/wp-content/themes/wp-real-estate/assets/images/header.jpg);">
+  <div class="container">
+    <h1>SwapFlat brings <strong>the best properties</strong> to <strong>the best people</strong>!</h1>
+    <p>Change the way you travel.</p>
+    <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+    <div class="search-form-control form-group">
+      <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+      <a href="#title" class="btn btn-flat">
+        <i class="fas fa-search"></i> Search
+      </a>
+    </div>
+    <% end %>
+  </div>
+</div>
 <div class="container">
+  <div class="title" id="title">
+    <h1>Check these awesome properties</h1>
+  </div>
   <div class="cards">
     <% @properties.take(9).each do |property| %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
-      url(https://q-xx.bstatic.com/xdata/images/hotel/840x460/76109618.jpg?k=ba537b048279407e0241cbd138c6dced32572a4f864bdaf5dbb60c314c3003b0&o=)">
-        <%= property.property_name %><br>
-        <%= property.property_address %><br>
-        <%= property.property_price %>
+      <div class="card-trip">
+        <img src="https://q-xx.bstatic.com/xdata/images/hotel/840x460/76109618.jpg?k=ba537b048279407e0241cbd138c6dced32572a4f864bdaf5dbb60c314c3003b0&o=" />
+        <div class="card-trip-infos">
+          <div>
+            <h2><%= property.property_name %></h2>
+            <p><%= property.property_address %></p>
+          </div>
+          <h2 class="card-trip-pricing"><%= property.property_price %>€</h2>
+          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+        </div>
       </div>
     <% end %>
   </div>
