Add availability migration

--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -5,5 +5,9 @@
   <%= f.text_field :property_address %>
   <%= f.label :property_price %>
   <%= f.number_field :property_price %>
+  <%= f.label :availability_from %>
+  <%= f.text_field :availability_from %>
+  <%= f.label :availability_until %>
+  <%= f.text_field :availability_until %>
   <%= f.submit %>
 <% end %>
