--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -6,7 +6,7 @@
     <div class="search-form-control form-group">
       <input class="form-control string required" type="text" name="search[query]" id="search_query" />
       <a href="#title" class="btn btn-flat">
-        <i class="fas fa-search"></i> Search
+        <i class="fas fa-search"></i> Search for location
       </a>
     </div>
     <% end %>
