--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -3,5 +3,7 @@
   User Profile: <%=  booking.user.user_name %>
   From <%= booking.booking_date_from %>
   To <%=  booking.booking_date_to %>
+  <button type="button" class="btn btn-success">Accept</button>
+  <button type="button" class="btn btn-danger">Reject</button>
 </ol>
 <% end %>
