--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -8,3 +8,4 @@
 
 <%= link_to 'Modify your property', edit_property_path(@property) %>
 <%= link_to 'Delete your property', property_path(@property), method: :delete %>
+<%= link_to 'Book your stay', new_property_booking_path(@property) %>
