--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,26 +10,20 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
-        <%# if user_signed_in? %>
-          <%# <li class="nav-item active"> %>
-            <%# <p class="nav-link"><%= "Welcome to SwapFlat, #{current_user.user_name}" %></p>
-          <%# </li> %>
-          <li class="nav-item">
+        <% if user_signed_in? %>
+          <p class="nav-link"> <%= "Welcome to SwapFlat, #{current_user.user_name}" %></p>
+          <li class="nav-item active">
             <%= link_to "Properties", properties_path, class: "nav-link" %>
           </li>
-          <%# <li class="nav-item dropdown"> %>
-            <%#= image_tag "https://kitt.lewagon.com/placeholder/users/franciscocsilva26", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <%# <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown"> %>
-           <li>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
-            </li>
-            <%# </div> %>
-          <%# </li> %>
-        <%# else %>
-          <!--li class="nav-item"-->
-            <%#= link_to "Login", new_user_session_path, class: "nav-link" %>
-          <!--/li-->
-        <%# end %>
+          </li>
+            </div>
+          </li>
+              <% else %>
+                <li class="nav-item"-->
+            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+                </li-->
+              <% end %>
       </ul>
     </div>
   </div>
