--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -5,7 +5,7 @@
     <%= simple_form_for :search, url: root_path, method: :get do |f| %>
     <div class="search-form-control form-group">
       <input class="form-control string required" type="text" name="search[query]" id="search_query" />
-      <a href="#title" class="btn btn-flat">
+      <a href="" class="btn btn-flat">
         <i class="fas fa-search"></i> Search for location
       </a>
     </div>
