--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -4,8 +4,8 @@
     <p>Change the way you travel.</p>
     <%= simple_form_for :search, url: root_path, method: :get do |f| %>
     <div class="search-form-control form-group">
-      <input class="form-control string required" type="text" name="search[query]" id="search_query" />
-      <a href="" class="btn btn-flat">
+      <input class="form-control string required" type="text" name="search" id="search_query" />
+      <a href="#title" class="btn btn-flat">
         <i class="fas fa-search"></i> Search for location
       </a>
     </div>
@@ -27,7 +27,7 @@
             <p><%= property.property_address %></p>
           </div>
           <h2 class="card-trip-pricing"><%= property.property_price %>€</h2>
-          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+          <img src="https://kitt.lewagon.com/placeholder/users/nikkilol" class="card-trip-user avatar-bordered" />
         </div>
       </div>
       <% end %>
