--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -4,9 +4,9 @@
     <p>Change the way you travel.</p>
     <%= simple_form_for :search, url: root_path, method: :get do |f| %>
     <div class="search-form-control form-group">
-      <input class="form-control string required" type="text" name="search" id="search_query" />
-      <a href="#title" class="btn btn-flat">
-        <i class="fas fa-search"></i> Search for location
+      <input class="form-control string required" type="text" name="search" id="search_query" placeholder="Which city do you want to rent a property?">
+      <a class="btn btn-flat">
+        <button type="submit"><i class="fa fa-search"></i>Search for location</button>
       </a>
     </div>
     <% end %>
