--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -15,3 +15,8 @@
 <%= link_to new_property_booking_path(@property) do %>
   <button type="button" class="btn btn-primary">Book your stay</button>
 <% end %>
+<% console %>
+<div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
