--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -2,5 +2,6 @@
   <%= f.input :property_name %>
   <%= f.input :property_address %>
   <%= f.input :property_price %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit %>
 <% end %>
