--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(http://www.todayproperties.com.my/wp-content/themes/wp-real-estate/assets/images/header.jpg);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dvmasclft/image/upload/v1644679015/uykkmm9jjeitx1kzktim.jpg);">
   <div class="container">
     <h1>SwapFlat brings <strong>the best properties</strong> to <strong>the best people</strong>!</h1>
     <p>Change the way you travel.</p>
